[package]
name = "ziso-rs"
version = "1.0.0"
edition = "2021"
authors = ["ThaCheeseBun"]
description = "ISO and ZSO converter. Based on ziso.py"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lz4_flex = "0.9"
clap = { version = "3", features = ["cargo"] }
byteorder = "1"
